--- a/src/scss/abstracts/mixins/_utilities.scss
+++ b/src/scss/abstracts/mixins/_utilities.scss
@@ -16,7 +16,7 @@
         $class: if(map-has-key($utility, class), map-get($utility, class), nth($properties, 1));
         $class-modifier: -#{$key};
 
-        @if $value != null {
+        @if $value {
             .#{$class}#{$infix}#{$class-modifier} {
                 @each $property in $properties {
                     #{$property}: $value !important;
