--- a/src/scss/layout/footer/_copyright.scss
+++ b/src/scss/layout/footer/_copyright.scss
@@ -5,7 +5,6 @@
 
 $footer-copyright-color: $footer-color !default;
 $footer-copyright-font-size: 0.75rem !default;
-$footer-copyright-hover-color: $link-hover-color !default;
 
 .footer__copyright {
     font-size: $footer-copyright-font-size;
@@ -15,6 +14,6 @@ $footer-copyright-hover-color: $link-hover-color !default;
     }
 
     a {
-        @include reset-link($footer-copyright-color, $footer-copyright-hover-color);
+        color: $footer-copyright-color;
     }
 }
