Update copyright comment

--- a/src/scss/abstracts/functions/_responsive-font-size.scss
+++ b/src/scss/abstracts/functions/_responsive-font-size.scss
@@ -1,6 +1,6 @@
 /**
- * Copyright @ 2024 Sparkle
- * https://github.com/danieledeluca/sparkle
+ * Copyright @ 2024 Sparkle UI
+ * https://github.com/sparkleui/sparkle
  */
 
 $rfs-base-value: 1.25rem !default;
