--- a/src/scss/abstracts/mixins/_buttons.scss
+++ b/src/scss/abstracts/mixins/_buttons.scss
@@ -1,6 +1,6 @@
 /**
- * Copyright @ 2023 Sparkle
- * https://github.com/danieledeluca/sparkle
+ * Copyright @ 2024 Sparkle UI
+ * https://github.com/sparkleui/sparkle
  */
 
 @mixin button {
