--- a/src/scss/base/reset/_reset.scss
+++ b/src/scss/base/reset/_reset.scss
@@ -1,6 +1,6 @@
 /**
- * Copyright @ 2024 Sparkle
- * https://github.com/danieledeluca/sparkle
+ * Copyright @ 2024 Sparkle UI
+ * https://github.com/sparkleui/sparkle
  */
 
 // Normalization of HTML elements, manually forked from Normalize.css to applying new styles.
