--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -1,6 +1,6 @@
 /**
- * Copyright @ 2024 Sparkle
- * https://github.com/danieledeluca/sparkle
+ * Copyright @ 2024 Sparkle UI
+ * https://github.com/sparkleui/sparkle
  */
 
 $pagination-list-gap: 0.5rem !default;
