--- a/src/scss/layout/header/_logo.scss
+++ b/src/scss/layout/header/_logo.scss
@@ -1,6 +1,6 @@
 /**
- * Copyright @ 2024 Sparkle
- * https://github.com/danieledeluca/sparkle
+ * Copyright @ 2024 Sparkle UI
+ * https://github.com/sparkleui/sparkle
  */
 
 $header-logo-height: 2.5rem !default;
