Update button component

--- a/src/scss/abstracts/mixins/_buttons.scss
+++ b/src/scss/abstracts/mixins/_buttons.scss
@@ -12,11 +12,11 @@
     --#{$prefix}-button-hover-background-color: #{$button-background-color};
     --#{$prefix}-button-hover-color: #{$button-color};
     --#{$prefix}-button-hover-border-color: #{$button-border-color};
-    --#{$prefix}-button-icon-margin: #{$button-icon-margin};
 
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    gap: $button-gap;
     padding: var(--#{$prefix}-button-padding);
     background-color: var(--#{$prefix}-button-background-color);
     color: var(--#{$prefix}-button-color);
@@ -46,12 +46,6 @@
         opacity: $button-disabled-opacity;
         pointer-events: none;
     }
-
-    > :not([hidden]) {
-        ~ :not([hidden]) {
-            margin-left: var(--#{$prefix}-button-icon-margin);
-        }
-    }
 }
 
 @mixin button-primary($color, $hover-color: darken($color, 5)) {
@@ -72,7 +66,6 @@
 
 @mixin button-icon {
     --#{$prefix}-button-padding: 0;
-    --#{$prefix}-button-font-size: #{$button-icon-font-size};
     --#{$prefix}-button-icon-width: #{$button-icon-width};
 
     justify-content: center;
@@ -84,20 +77,18 @@
     @if $size == 'big' {
         --#{$prefix}-button-padding: #{$button-big-padding-y $button-big-padding-x};
         --#{$prefix}-button-font-size: #{$button-big-font-size};
-        --#{$prefix}-button-icon-margin: #{$button-big-icon-margin};
     } @else if $size == 'small' {
         --#{$prefix}-button-padding: #{$button-small-padding-y $button-small-padding-x};
         --#{$prefix}-button-font-size: #{$button-small-font-size};
-        --#{$prefix}-button-icon-margin: #{$button-small-icon-margin};
     }
 }
 
 @mixin button-icon-size($size) {
     @if $size == 'big' {
-        --#{$prefix}-button-font-size: #{$button-big-icon-font-size};
         --#{$prefix}-button-icon-width: #{$button-big-icon-width};
+        --#{$prefix}-button-font-size: #{$button-big-font-size};
     } @else if $size == 'small' {
-        --#{$prefix}-button-font-size: #{$button-small-icon-font-size};
         --#{$prefix}-button-icon-width: #{$button-small-icon-width};
+        --#{$prefix}-button-font-size: #{$button-small-font-size};
     }
 }
