--- a/src/scss/abstracts/variables/_buttons.scss
+++ b/src/scss/abstracts/variables/_buttons.scss
@@ -4,12 +4,12 @@
  */
 
 // Button multipliers
-$button-padding-x-multiplier: 2 !default;
-$button-icon-font-size-multiplier: 1.5 !default;
+$button-padding-x-multiplier: 2.5 !default;
 
 // Button
-$button-padding-y: 0.75rem !default;
+$button-padding-y: 0.5rem !default;
 $button-padding-x: $button-padding-y * $button-padding-x-multiplier !default;
+$button-gap: 5px !default;
 $button-background-color: transparent !default;
 $button-color: $body-color !default;
 $button-border-width: 1px !default;
@@ -24,8 +24,6 @@ $button-disabled-opacity: 0.5 !default;
 $button-icon-width: calc(
     ($button-padding-y * 2) + ($button-font-size * $button-line-height) + ($button-border-width * 2)
 ) !default;
-$button-icon-margin: div($button-padding-x, 2) !default;
-$button-icon-font-size: $button-font-size * $button-icon-font-size-multiplier !default;
 
 // Button big
 $button-big-padding-y: $button-padding-y + 0.125rem !default;
@@ -35,8 +33,6 @@ $button-big-font-size: $body-font-size * 1.25 !default;
 $button-big-icon-width: calc(
     ($button-big-padding-y * 2) + ($button-big-font-size * $button-line-height) + ($button-border-width * 2)
 ) !default;
-$button-big-icon-margin: div($button-big-padding-x, 2) !default;
-$button-big-icon-font-size: $button-big-font-size * $button-icon-font-size-multiplier !default;
 
 // Button small
 $button-small-padding-y: $button-padding-y - 0.25rem !default;
@@ -46,5 +42,3 @@ $button-small-font-size: $body-font-size * 0.875 !default;
 $button-small-icon-width: calc(
     ($button-small-padding-y * 2) + ($button-small-font-size * $button-line-height) + ($button-border-width * 2)
 ) !default;
-$button-small-icon-margin: div($button-small-padding-x, 2) !default;
-$button-small-icon-font-size: $button-small-font-size * $button-icon-font-size-multiplier !default;
