Switch to @sparkleui/icons from @sparkleui/sparkle-icons

--- a/src/scss/abstracts/mixins/_mixins.scss
+++ b/src/scss/abstracts/mixins/_mixins.scss
@@ -8,4 +8,4 @@
 @import 'buttons';
 @import 'animations';
 @import 'utilities';
-@import '@sparkleui/sparkle-icons/scss';
+@import '@sparkleui/icons/scss';
